Convolution on meshs (possibly independent of channels) complete
In order for the noise properties of each channel to not be mixed,
convolution would have be done independently on each mesh. A new set
of functions were added to mesh.c to do the convolution on each
channel independently. Ofcourse, there is also an option
(--fullconvolution) so if the user wants, the convolution will take
place over the full image irrespective of the channels.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-05-24  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/imgcrop/crop.c (sectionparser): When only a `*' was given
+	with no positive or negative following number, a segmentation
+	fault would happen. This bug is now fixed.
+
+	* lib/spatialconvolve.c (sconvonthread): No convolution will be
+	attempted for a NaN pixel.
+
 2015-05-23  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* lib/mode.c (modesymmetricity): Corrrected topi to account for
