External function for operating on each mesh
Until now, the function that would operate on the meshs was defined in
mesh.c. This made it very hard to do a variety of things. But now,
using a function pointer, the function that will be spinned off by
pthread_create is a function pointer in operateonmesh so any of the
programs can easily use their own functions. There is also a `void *'
pointer in meshparams that can point to the parameters structure of
the calling program so all the parameters of the program are
accessible.

The example in src/subtractsky/subtractsky.c can be a good tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-05-25  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* lib/mesh.c (operateonmesh): New name for `fillmesh'. Now the
+	function that will be spinned off from each thread can be
+	specified from the outside.
+
 2015-05-24  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/imgcrop/crop.c (sectionparser): When only a `*' was given
