NoiseChisel's detection is nearly complete
NoiseChisel's detection algorithm is nearly fully in place now. Both
the background regions and the detection regions are now processed and
the Signal to noise ratio is found for all their connected
components. The Signal to noise ratio limit is also found and smoothed
for all meshs. We just have to remove all the false detections in the
detected regions.

The Histogram and Cumulative frequency functions in statistics were
also corrected to work without any bugs. Until now, there was a
problem when a data element would fall on the last interval.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2015-06-03  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/noisechisel/astnoisechisel.conf: Changed default dthresh to
+	-0.1.
+
+	* lib/statistics.c (histogram): Corrected the function. Until now,
+	there was a problem when an element was on the last bin: it would
+	go onto the next bin and thus would not be counted. This issue is
+	now corrected.
+	(cumulativefp): Same as above.
+
 2015-06-02  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* lib/mesh.c (operateonmesh): mp->indexs is now allocated in
