Mesh checking and ID functions updated, NoiseChisel clump S/N
There were two main updates in this commit:

1. The mesh IDs (that are sometimes on the whole image and sometimes
   on channels) were very confusing for me and so the functions were
   ambiguous and thus caused a lot of mis-understanding. After playing
   a lot with them and thinking more about them, I got a much better
   understanding of how to clearly separate the use cases. I have
   explained everything extensively in mesh.c so someone new (and me
   in the future!) can easily get going.

2. Thanks to these new functions, there was no more need to store an
   array the size of the image for the standard deviation of every
   pixel. Which ever function needs the standard deviation for pixel
   can easily find it from the garray in the mesh structure. This is
   very good for memory usages, because for large images, a full copy
   was very heavy.

3. The NoiseChisel clump S/N calculations are now patially done. They
   still need some work to do, but things are on the right track.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2015-06-06  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
+	* lib/mesh.c (chbasedidfromgid): Chaged the old setmeshid to
+	chbasedidfromgid along with a new function (gidfromchbasedid). The
+	explanations on top of the first clearly explain everything
+	extensively. The old function (my understanding) was not yet
+	mature enough but now it seems to be very nicely working. All the
+	functions that used this were also changed.
+
 	* src/noisechisel/astnoisechisel.conf: Changed default
 	lastmeshfrac to 0.51 from 0.6.
 
